# WanderingMinstrel

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  skaffold.yml
helm/: Chart.yaml  values.yaml
helm/templates/: minstrel.yml  namespace.yml
minstrel/: BUILD  Cargo.toml
minstrel/src/: main.rs
minstrel/src/commands/: item.rs  mod.rs
minstrel/src/xivapi/: client.rs  models.rs
src/: main.rs
