[package]
name = "minstrel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-traits = "0.0.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["env", "derive"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
