"""Bazel module for Wandering Minstrel"""
module(name = "minstrel")

rust_version = "1.78.0"

bazel_dep(name = "rules_oci", version = "1.7.6")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_rust", version = "0.46.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "toolchains_llvm", version = "1.0.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "16.0.0",
)

llvm.sysroot(
    name = "llvm_toolchain",
    targets = ["linux-x86_64"],
    label = "@org_chromium_sysroot_linux_amd64//:sysroot",
)

use_repo(llvm, "llvm_toolchain")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:55a5e011b2c4246b4c51e01fcc2b452d151e03df052e357465f0392fcd59fddf",
    image = "gcr.io/distroless/cc-debian11",
    platforms = ["linux/amd64"],
)

use_repo(oci, "distroless_cc")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = [rust_version],
    extra_target_triples = ["x86_64-unknown-linux-gnu"],
)

use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//minstrel:Cargo.lock",
    manifests = [
        "//minstrel:Cargo.toml",
    ],
)

use_repo(crate, "crates")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "org_chromium_sysroot_linux_amd64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "1be60e7c456abc590a613c64fab4eac7632c81ec6f22734a61b53669a4407346",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2028cdaf24259d23adcff95393b8cc4f0eef714b/debian_bullseye_amd64_sysroot.tar.xz"],
)

register_toolchains(
    "@rust_toolchains//:all",
    "@llvm_toolchain//:all",
)
