[package]
name = "minstrel"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
futures = "0.3.31"
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["env", "derive"] }
jsonwebtoken = "9.3.0"
poise = "0.6.1"
rustls = { version = "0.23.17", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
serde = "1.0.215"
serde_json = "1.0.133"
serenity = { version = "0.12.4", features = ["rustls_backend"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
